# ocr-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  STATUS.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture-v0.3.md  comprehensive-metadata-architecture.md  credentials-architecture.md  mathpix-comparison-findings.md  multi-format-architecture.md  tesseract-comparison-findings.md  tesseract-comparison-study.md
docs/sphinx/: api.rst  conf.py  index.rst  modules.rst
ocr_output/.checkpoint/: 3a6754deda6662c9.json  b4c502b901c36f91.json  e98bc360aa347ca2.json  e9946b9a3afd0120.json  f2e5e921bffac46e.json
ocr_output/24f163dac767/: 24f163dac767.md  page_0001_final.md  page_0001_raw.json  page_0002_final.md  page_0002_raw.json  page_0003_final.md  page_0003_raw.json
ocr_output/2ee7454c02a6/: 2ee7454c02a6.md  page_0001_final.md  page_0001_raw.json  page_0002_final.md  page_0002_raw.json  page_0003_final.md  page_0003_raw.json  page_0004_final.md  page_0004_raw.json  page_0005_final.md  page_0005_raw.json  page_0006_final.md  page_0006_raw.json  page_0007_final.md  page_0007_raw.json  page_0008_final.md  page_0008_raw.json  page_0009_final.md  page_0009_raw.json  page_0010_final.md  page_0010_raw.json  page_0011_final.md  page_0011_raw.json  page_0012_final.md  page_0012_raw.json  page_0013_final.md  page_0013_raw.json  page_0014_final.md  page_0014_raw.json  page_0015_final.md  page_0015_raw.json  page_0016_final.md  page_0016_raw.json  page_0017_final.md  page_0017_raw.json  page_0018_final.md  page_0018_raw.json  page_0019_final.md  page_0019_raw.json  page_0020_final.md  (+53 more)
ocr_output/6fecedb825f5/: 6fecedb825f5.md  page_0001_final.md  page_0001_raw.json  page_0002_final.md  page_0002_raw.json  page_0003_final.md
ocr_output/d16f3cc29ac9/: d16f3cc29ac9.md  page_0001_final.md  page_0001_raw.json  page_0002_final.md  page_0002_raw.json  page_0003_final.md  page_0003_raw.json
profiles/: README.md  bhg.yaml  doml54.yaml  latin_martyrology.yaml  spanish_devotional.yaml
profiles/examples/: citation_focused.yaml  (+2 more)
scripts/: benchmark.py  build_docs.sh
tests/: conftest.py  create_test_pdfs.py  test_checkpoint.py  test_citations.py  test_config.py  test_costing.py  test_credentials.py  test_e2e.py  test_formatter.py  test_identifier.py  test_integration.py  test_language_detect.py  test_language_passthrough.py  test_merger.py  test_models.py  test_postprocess.py  test_profiles.py  test_retry.py  test_sidecar.py  test_sources.py
(+511 files in other folders)
