[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ocr-pipeline"
version = "0.2.0"
authors = [{ name = "Jacob Gruber" }]
description = "Multi-engine OCR with VLM merge for PDF documents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["ocr", "pdf", "document-ai", "vlm", "marker", "mathpix", "surya"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
]
dependencies = [
    "pymupdf>=1.24.0",
    "tenacity>=8.0",
    "pyyaml>=6.0",
    "tqdm>=4.60",
    "requests>=2.28",
    "anthropic>=0.30",
    "google-genai>=1.0",
    "google-cloud-documentai>=3.15",
    "pillow>=10.0",
    "mcp>=1.6.0",
    "pytesseract>=0.3.13",
    "lxml>=6.1.1",
    "filetype>=1.2.0",
    "ebooklib>=0.20",
    "python-docx>=1.2.0",
    "charset-normalizer>=3.4.7",
    "clevercsv>=0.8.5",
    "python-calamine>=0.7.0",
    "python-pptx>=1.0.2",
    "defusedxml>=0.7.1",
    "openpyxl>=3.1.5",
    "striprtf>=0.0.32",
    "odfpy>=1.4.1",
    "py7zr>=1.1.3",
    "rarfile>=4.2",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
marker = [
    "marker-pdf>=1.10.0",
]
surya2 = [
    "surya-ocr>=0.17",
]

[project.scripts]
ocr-pipeline = "ocr_pipeline.cli:main"
ocr-pipeline-mcp = "ocr_pipeline.mcp_server:main"

[project.urls]
Homepage = "https://github.com/jacobhgruber-dev/ocr-pipeline"
Repository = "https://github.com/jacobhgruber-dev/ocr-pipeline"
Issues = "https://github.com/jacobhgruber-dev/ocr-pipeline/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ocr_pipeline"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [".venv", ".git", "__pycache__", "downloads"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests that use real PDFs and optionally real API calls (slow, may require credentials)",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=7.1",
    "ruff>=0.11.0",
    "mypy>=1.15",
    "fpdf2>=2.8.7",
]
